pages/main/style.css
/*----- COMMON STYLES -----*/
* {
  box-sizing: border-box;
}
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
a {
  text-decoration: none;
  color: inherit;
}
h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}
button {
  cursor: pointer;
}
:root {
  --black: #000000;
  --footer-black: #111115;
  --white: #ffffff;

  --orange_grad: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
  --orange_grad_1: linear-gradient(113.96deg, #fa6f32 1.49%, #fe9013 101.44%);
  --orange_grad_2: linear-gradient(#f9804b 0%, #fe9013 100%);
  --orange_grad_3: linear-gradient(
      315.75deg,
      rgba(254, 210, 144, 0.7) 30.06%,
      #febdab 100.95%,
      rgba(254, 210, 144, 0.7) 106.36%
    ),
    linear-gradient(
      315.75deg,
      rgba(254, 189, 171, 0.74) 30.06%,
      rgba(243, 169, 248, 0.66) 50.74%,
      #e0d8f0 80.49%,
      #eaf7fe 127.9%,
      #eaf7fe 149.54%
    ),
    linear-gradient(
      315.75deg,
      rgba(254, 189, 171, 0.74) 30.06%,
      rgba(243, 169, 248, 0.66) 50.74%,
      #e0d8f0 80.49%,
      #eaf7fe 127.9%,
      #eaf7fe 149.54%
    );
  --purple-gradient: linear-gradient(
    226deg,
    #febdab 6.48%,
    #f3a9f8 22.51%,
    #e0d8f0 45.57%,
    #eaf7fe 82.33%,
    #eaf7fe 99.1%
  );
  --pink_gradient: linear-gradient(
      315.75deg,
      rgba(254, 189, 171, 0.74) 30.06%,
      rgba(243, 169, 248, 0.66) 50.74%,
      #e0d8f0 80.49%,
      #eaf7fe 127.9%,
      #eaf7fe 149.54%
    ),
    linear-gradient(
      315.75deg,
      rgba(254, 189, 171, 0.74) 30.06%,
      rgba(243, 169, 248, 0.66) 50.74%,
      #e0d8f0 80.49%,
      #eaf7fe 127.9%,
      #eaf7fe 149.54%
    );
  --rad: #d31414;
  --orange: #fe9013; /* orange_3 */

  --yellow: #ffee2e;
  --black_blue: #333b41;
  --gray: #767474;
  --gray_smoky: #ababab;
  --range-gray: #f5f7f6;
  --light_gray_2: #bdbdbd;
  --light_gray: #f1f3f2;
  --icon-bg-default: rgba(196, 196, 196, 0.5);
  --frosted_glass_white: rgba(253, 253, 255, 0.52);
  --hover_orange_btn: #e47209;
  --active_green: #4b9200;
}
body {
  font-family: 'Roboto', sans-serif;
  line-height: 22px;
}
.container {
  width: 1600px;
  margin: 0 auto;
  overflow-x: hidden;
}
.wrapper {
  width: 1160px;
  margin: 0 auto;
}
h1 {
  font-size: 19px;
  line-height: 23px;
  font-weight: 400;
  text-align: center;
}
.nav a:hover {
  color: var(--hover_orange_btn);
}

.nav a:focus {
  color: var(--active_green);
}
.btn:hover,
.pets-arrows__btn:hover {
  background: var(--hover_orange_btn);
}
.social__icon:hover {
  background: var(--hover_orange_btn);
}
.social__link:hover .social__title {
  color: var(--hover_orange_btn);
}
.social__link:hover .social__icon {
  background: var(--hover_orange_btn);
}
.btn:focus,
.pets-arrows__btn:focus {
  background: var(--active_green);
}

.social__link:focus .social__icon {
  background: var(--active_green);
}
.social__link:focus .social__title {
  color: var(--active_green);
}

.btn:disabled,
.btn[disabled] {
  background: var(--gray);
}
input[type='email']:ivalid:focus {
  border: 1px solid var(--rad);
}
/*----- HEADER STYLES -----*/
header {
  background: var(--black);
  color: var(--white);
}
header .wrapper {
  display: flex;
  align-items: center;
  padding: 14px 0;
}
.logo {
  width: 82px;
  height: 52px;
  margin-right: 63px;
  border: 1px solid var(--white);
  padding: 3.55px 4.75px;

  position: relative;
}
.logo img {
  position: absolute;
  left: 13.23px;
  top: 24.64px;
}
.nav {
  display: flex;
  gap: 58px;
  font-weight: 500;

  color: var(--white);
}
.copyright {
  margin-left: auto;
  font-weight: 500;
}
nav a:focus {
  background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}
.active {
  background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}
.copyright a:hover {
  background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}
/*----- HERO STYLES -----*/
.hero {
  background-image: url('../../assets/images/panda.png');
  background-repeat: no-repeat;
  background-position: center -80px;
  background-size: cover;
  width: 100%;
  height: 780px;
}
.hero .wrapper {
  display: flex;
  justify-content: end;
}
.hero_content {
  width: 500.3px;
  text-align: center;
  position: absolute;
  margin-top: 86px;
}
.circle {
  width: 465px;
  height: 465px;
  background: var(--orange_grad);
  border-radius: 50%;
  margin-top: 12px;
  margin-right: 108.31px;
}
.hero p {
  text-transform: uppercase;
  color: var(--white);

  font-size: 106.5px;
  font-weight: 700;
  line-height: 80px;
}
.yellow {
  color: var(--yellow);
}
.btn {
  border: none;
  cursor: pointer;
  color: var(--white);
  background: var(--orange_grad);
  border-radius: 25px;

  text-transform: uppercase;
  font-family: 'Roboto', sans-serif;
  line-height: 22.4px;
  padding: 16px auto;
  width: 298px;
  height: 54px;
}
.hero-btn {
  margin-top: 60px;
}
/*----- BACKSTAGE STYLES -----*/
.backstage {
  position: relative;
}
.flex-two-col {
  display: flex;
  justify-content: start;
  gap: 87px;
  margin-left: 220px;
}
.backstage .container {
  /* position: relative; */
}
.backstage .wrapper {
  /* padding: 140px 0 180px; */
  padding: 60px 0 173px;
}
.backstage .plant {
  background: url('../../assets/images/backstage-plant.png');
  height: 605px;
  width: 293px;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  background-repeat: no-repeat;
  margin-top: 12px;
  position: absolute;
  /* top: 12px; */
  top: -80px;
  right: -89px;
}

.backstage article {
  width: 465px;
  color: var(--black_blue);
}

.backstage .right-box img {
  position: absolute;
  top: 12px;
  right: 0;
}
.backstage h2 {
  font-size: 48px;
  line-height: 58px;
  font-weight: 400;
  margin-bottom: 20px;
}
/* ... */

